--- a/css/styles.css
+++ b/css/styles.css
@@ -170,14 +170,42 @@ footer {
 	color: var(--color-text);
 	font-family: var(--font-subtitle);
 	text-align: center;
-	padding: 0 10px;
-	height: 70px;
+	padding: 10px 10px;
 	display: flex;
+	flex-direction: row;
 	align-items: center;
-	justify-content: center;
+	justify-content: space-between;
 	box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
-	position: relative;
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	width: 100%;
 	z-index: 500;
+	gap: 20px;
+}
+
+footer > div {
+	flex: 1;
+	text-align: center;
+}
+
+footer .developer {
+	color: var(--color-text-muted);
+	opacity: 0.5;
+	font-size: 0.8rem;
+	margin: 0;
+}
+
+footer i {
+	color: white;
+	font-size: 1.5rem;
+	margin: 0 10px;
+}
+
+footer a {
+	color: var(--color-text);
+	text-decoration: none;
+	transition: color 0.3s;
 }
 
 /* ========== RESPONSIVE ========== */
