--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	height: 100%;
-	overflow: hidden;
+	overflow-x: hidden;
 	background-color: var(--color-bg);
 	color: var(--color-text);
 	font-family: var(--font-primary);
