--- a/css/styles.css
+++ b/css/styles.css
@@ -289,6 +289,12 @@ main {
 	width: 25%; /* Columna "Nombre de la Columna" */
 }
 
+.tabla-columnas td:nth-child(1) {
+	font-size: 1.5rem;
+	font-weight: bold;
+	text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+}
+
 .tabla-columnas th:nth-child(2),
 .tabla-columnas td:nth-child(2) {
 	width: 50%; /* Columna "Información" */
